[package]
name = "actix-elray-sim"
version = "0.1.0"
authors = ["Evgenii P. <eupn@protonmail.com>"]
edition = "2018"
description = "An actix-based Erlay TX relay simulation"

[dependencies]
actix = "0.8"
rand = "0.6"
hex = "0.3.2"
sha2 = "0.8.0"
digest = "0.8.0"
minisketch-rs = "0.1"
rand_xorshift = "0.1.1"
byteorder = "1.3.1"
siphasher = "0.3.0"
structopt = "0.2.17"
